scss/modules/_placeholders.scss
@mixin button-color ($bg, $fg) {
  background: $bg;
  border: 0.1em solid $bg;
  color: $fg;

  &:visited {
    color: $fg;
  }

  &:hover,
  &:focus {
    background: lighten($bg, 5%);
    border: 0.1em solid lighten($bg, 5%);
    color: $fg;
  }

  &:active {
    background: darken($bg, 5%);
    border: 0.1em solid darken($bg, 5%);
    color: transparentize($fg, 0.3333);
  }

  &.secondary {
    background: $fg;
    color: $bg;
  }
}

%text {
  font-size: 1em;
  line-height: 1.25;
  margin: 0;
  padding: 1em 2em;

  @media (min-width: 45em) {
    padding-left: calc(50% - 20em);
    padding-right: calc(50% - 20em);
  }

  @media (min-width: 83em) {
    font-size: 1.2vw;
    padding-left: 25vw;
    padding-right: 25vw;
  }
}

%breakout {
  margin: 0 -2.6666em;

  @media (min-width: 45em) {
    margin-left: calc(-50vw + 27.3333em);
    margin-right: calc(-50vw + 27.3333em);
  }

  @media (min-width: 83em) {
    margin-left: -25vw;
    margin-right: -25vw;
  }
}

%white-link {
  color: $white;

  &:visited {
    color: $white;
  }

  &:hover {
    color: $white23;
  }
}

%h1 {
  font-family: 'Fontin Sans Small Caps';
  font-size: 2.618em;
  font-weight: normal;
  margin: 1em 0;

  @media (min-width: 83em) {
    font-size: 3.27vw;
  }
}

%h2 {
  font-family: 'Fontin Sans';
  font-size: 1.618em;
  font-weight: normal;
  margin: 1.618em 0 1em 0;

  @media (min-width: 83em) {
    font-size: 2.02vw;
  }
}

%h3 {
  font-weight: bold;
  margin: 1.618em 0 0.618em 0;
}

%h4 {
  font-family: 'Fontin Sans Small Caps';
  font-weight: normal;
  margin: 1.618em 0 0.618em 0;
}

%h5 {
  font-style: italic;
  font-weight: normal;
  margin: 1em 0 0.618em 0;
}

%hr {
  background: url(#{$img}/divider.png) no-repeat center;
  background-size: contain;
  border: 0;
  display: block;
  height: 25px;
  margin: 2.618em 0;
  width: 100%;
}

%findable {
  opacity: 0.5;
  transition: all 0.3s ease-in-out;

  &:hover {
    opacity: 1;
  }
}

%form-field {
  appearance: none;
  border: 0.1em solid $brown13;
  border-radius: $border-radius-tall;
  display: block;
  font-family: 'Fontin';
  font-size: 1em;
  padding: 0.618em 1.518em;
  margin: 1em -1.618em;
  width: calc(100% + 3.236em);

  &::placeholder {
    color: $brown23;
  }

  &:hover,
  &:focus {
    border: 0.1em solid $blue;
    outline: none;
  }

  &.error {
    border-color: $red;
  }
}

%button {
  @include button-color($red, $white);
  appearance: none;
  border-radius: $border-radius-long 0;
  cursor: pointer;
  display: inline-block;
  font-family: 'Fontin Sans';
  font-size: 1em;
  font-weight: normal;
  margin: 0 0.618em 0 0;
  padding: 0.618em 1.618em;
  text-decoration: none;
  transition: 0.1s ease-in-out;
  width: auto;

  &[disabled]:not(.loading) {
    background: $black16;
    border: 0.1em solid transparent;
    color: $black13;
    cursor: not-allowed;

    &.secondary {
      background: $white;
      border: 0.1em solid $black16;
    }
  }

  &[disabled].loading {
    cursor: not-allowed;

    &:before {
      background: url(https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/loading-button.gif) no-repeat center;
      background-size: contain;
      content: '';
      display: inline-block;
      height: 1em;
      margin-right: 0.382em;
      vertical-align: middle;
      width: 1em;
    }
  }
}

%aside {
  background: $brown16;
  border-radius: $border-radius-long;
  margin: 1.618em -1.618em;
  padding: 1.618em;

  h1, h2, h3, h4, h5 {
    margin-top: 0;
  }

  @media (min-width: 50em) {
    margin: 1.618em -2.618em;
    padding: 2.618em;
  }
}

%unformatted-list {
  list-style-type: none;
  margin: 1em 0;
  padding: 0;
}

%code-block {
  background: $brown16;
  border: 1px solid $brown13;
  margin: 1em -1.618em;

  summary,
  figcaption {
    border: 0;
    color: $brown;
    font-family: 'Fontin Sans Small Caps';
    margin: 0;
    padding: 0.618em 1.618em;
  }

  summary {
    cursor: pointer;
  }

  code {
    border-top: 1px solid $brown13;
    display: block;
    max-height: 20em;
    overflow: scroll;
    padding: 1em 1.618em;
    white-space: pre;
  }
}

